fix: Prevent line breaks in the expense edit/delete column

--- a/app/mikane/src/app/pages/expenditures/expenditures.component.scss
+++ b/app/mikane/src/app/pages/expenditures/expenditures.component.scss
@@ -84,6 +84,10 @@
 	font-size: 1.2em;
 }
 
+.edit-delete-column {
+	display: flex;
+}
+
 .filters {
 	margin-right: 20px;
 	width: 280px;
